<resources>
    <string name="app_name">MediaLibrary</string>
    <string name="intro">Ваша персональная медиатека прямо в кармане</string>
    <string name="get_start">Начать</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="login">Авторизоваться</string>
    <string name="noacc">После нажатия на кнопку "продолжить", вам будет отправлен код подтверждения. После подтверждения email вы сможете использовать его для входа.</string>
    <string name="auth">Авторизация</string>
    <string name="what_would_you_like_to_watch">Что вы хотите посмотреть?</string>
    <string name="search_movies">Поиск фильма...</string>
    <string name="new_movies">Лучшие фильмы</string>
    <string name="upcoming_movies">Популярные фильмы</string>
    <string name="home">Home</string>
    <string name="url">https://coursach-3342d-default-rtdb.europe-west1.firebasedatabase.app</string>
    <string name="profile">Profile</string>
    <string name="mr">mr</string>
    <string name="todo">TODO</string>
    <string name="liked">liked</string>
    <string name="find">find</string>
    <string name="_0">0</string>
    <string name="summary">Summary</string>
    <string name="test">test</string>
    <string name="actors">Actors</string>
    <string name="title">title</string>
    <string name="score">score</string>
    <string name="title2">title</string>
    <string name="register">Войдите с помощью email</string>
    <string name="mail">example@example.com</string>
    <string name="continu">Продолжить</string>
    <string name="remember_me">Запомнить меня</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ddd">ddd</string>
    <string name="dadadad">dadadad</string>
    <string name="favorites">Избранные фильмы</string>
    <string name="descript">
        Домашняя медиатека - это приложение для управления домашней коллекцией фильмов. Приложение предоставляет удобный интерфейс для организации и доступа к кино.

\n\n\nПриложение создано на основе Java для Android и использует базу данных FireBase для хранения информации о фильмах и использования авторизации. Для интерфейса приложения используется Android SDK.

</string>
    <string name="appdecsr">О приложении</string>
    <string name="email">Мы отправили ссылку подтверждения email:\n</string>
    <string name="input">Введите email:</string>
    <string name="inp_code">Введите пароль</string>
    <string name="delfav">Удалено из избранного.</string>
    <string name="addfav">Добавлено в избранное.</string>
    <string name="errdelfav">Ошибка при удалении из избранного.</string>
    <string name="erraddfav">Не удалось добавить в избранное.</string>
    <string name="errloadinfo">Ошибка при загрузке информации о фильме!</string>
    <string name="errextrinfo">Ошибка при извлечении данных о фильме!</string>
    <string name="infounav">Информация о фильме недоступна!</string>
    <string name="erremail">Некорректный адрес электронной почты.</string>
    <string name="errenter">Произошла ошибка при попытке входа. Попробуйте снова.</string>
    <string name="emailinp">Пожалуйста, введите адрес электронной почты.</string>
    <string name="passinp">Пожалуйста, введите пароль.</string>
    <string name="errreg">Ошибка при регистрации. Попробуйте снова.</string>
    <string name="errregexist">Ошибка при регистрации. Такой пользователь уже существует. Возможно вы ввели неверный пароль</string>
    <string name="emailversend">Письмо с подтверждением отправлено на вашу почту.</string>
    <string name="erremailversend">Не удалось отправить письмо с подтверждением. Попробуйте снова.</string>
    <string name="errnotexist">Ошибка: пользователь не найден.</string>
    <string name="pattern">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="plspass">Пожалуйста, введите пароль.</string>
    <string name="no_internet">Нет подключения к интернету.</string>
</resources>
