<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/descriptionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Fragments.DescriptionFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ScrollViewSeen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        android:contentDescription="@string/dadadad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backImgSeen"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/bg_cirlcle_dark"
                android:padding="8dp"
                android:src="@drawable/ic_round_arrow_back_24px"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/titleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appdecsr"
                android:textColor="#34e3c4"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backImgSeen" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descript"
                android:textSize="16sp"
                android:textColor="#DDDDDD"
                android:lineSpacingExtra="8dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/titleDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/bottom_navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
