<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:background="@color/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/nav_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/ddd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_behavior="com.google.android.material.bottomappbar.BottomAppBar$Behavior"
            android:layout_gravity="bottom"
            android:backgroundTint="#282f32">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="-40dp"
                android:paddingEnd="-40dp"
                android:layout_marginStart="0dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/liked"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="-10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/liked"
                    app:srcCompat="@drawable/btn_2"
                    app:tint="@color/white"
                    tools:layout_weight="0.2" />

                <ImageView
                    android:id="@+id/seen"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/mr"
                    app:srcCompat="@drawable/ic__round_remove_red_eye"
                    app:tint="@color/white"
                    tools:layout_weight="0.2" />

            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            style="@style/Floating"
            android:visibility="visible"
            app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home"
            app:layout_anchor="@id/app_bar"
            app:maxImageSize="30dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>